--- a/test.html
+++ b/test.html
@@ -17,54 +17,49 @@
 <body>
   <div class="container">
     <div class="calculator">
-
-      <div>
-        <button class="plustButton">+</button>
-        <button class="minuseButton">-</button>
-        <button class="xButton">x</button>
-      </div>
-
       <div class="resultBar">
         <span class='reslutNumber'>0</span>
       </div>
+      <div class="calculator-information">0</div>
       <div class="calculationBox">
 
         <div class='numbersButton'>
-          <button class="numbers">AC</button>
-          <button class="numbers">+/-</button>
-          <button class="numbers">%</button>
-          <button class="numbers">/</button>
+          <button class="operator">AC</button>
+          <button class="operator">+/-</button>
+          <button class="operator">%</button>
+          <button class="operator">/</button>
         </div>
 
           <div class='numbersButton'>
             <button class="numbers">7</button>
             <button class="numbers">8</button>
             <button class="numbers">9</button>
-            <button class="numbers">X</button>
+            <button class="operator">X</button>
           </div>
 
           <div class='numbersButton'>
             <button class="numbers">4</button>
             <button class="numbers">5</button>
             <button class="numbers">6</button>
-            <button class="numbers">-</button>
+            <button class="operator">-</button>
           </div>
 
           <div class='numbersButton'>
             <button class="numbers">1</button>
             <button class="numbers">2</button>
             <button class="numbers">3</button>
-            <button class="numbers">+</button>
+            <button class="operator">+</button>
           </div>
 
           <div class='numbersButton'>
             <button class="zeroNumber">0</button>
-            <button class="numbers">.</button>
-            <button class="numbers">=</button>
+            <button class="operator">.</button>
+            <button class="operator">=</button>
           </div>
-      </div>
+        </div>
     </div>
   </div>
-</body>
 
+</body>
+  <script src='./index.js'></script>  
 </html>
