HTML Class Name 수정

--- a/test.html
+++ b/test.html
@@ -18,47 +18,41 @@
   <div class="container">
     <div class="calculator">
       <div class="resultBar">
-        <span class='reslutNumber'>0</span>
+        <span class='resultnumber'>0</span>
       </div>
-      <div class="calculator-information">0</div>
-      <div class="calculationBox">
-
-        <div class='numbersButton'>
-          <button class="operator">AC</button>
-          <button class="operator">+/-</button>
-          <button class="operator">%</button>
-          <button class="operator">/</button>
-        </div>
-
-          <div class='numbersButton'>
-            <button class="numbers">7</button>
-            <button class="numbers">8</button>
-            <button class="numbers">9</button>
-            <button class="operator">X</button>
-          </div>
-
-          <div class='numbersButton'>
-            <button class="numbers">4</button>
-            <button class="numbers">5</button>
-            <button class="numbers">6</button>
-            <button class="operator">-</button>
-          </div>
-
-          <div class='numbersButton'>
-            <button class="numbers">1</button>
-            <button class="numbers">2</button>
-            <button class="numbers">3</button>
-            <button class="operator">+</button>
-          </div>
-
-          <div class='numbersButton'>
-            <button class="zeroNumber">0</button>
-            <button class="operator">.</button>
-            <button class="operator">=</button>
-          </div>
-        </div>
+  <div class="calculationBox">
+    <div class='numbersButton'>
+      <button class="resultClear">AC</button>
+      <button class="operator">+/-</button>
+      <button class="operator">%</button>
+      <button class="operator">/</button>
     </div>
+    <div class='numbersButton'>
+      <button class="numbers">7</button>
+      <button class="numbers">8</button>
+      <button class="numbers">9</button>
+      <button class="operator">*</button>
+    </div>
+    <div class='numbersButton'>
+      <button class="numbers">4</button>
+      <button class="numbers">5</button>
+      <button class="numbers">6</button>
+      <button class="operator">-</button>
+    </div>
+    <div class='numbersButton'>
+      <button class="numbers">1</button>
+      <button class="numbers">2</button>
+      <button class="numbers">3</button>
+      <button class="operator">+</button>
+    </div>
+    <div class='numbersButton'>
+      <button class="numbers zero">0</button>
+      <button class="operator">.</button>
+      <button class="calculateResult">=</button>
+    </div>
+     </div>
   </div>
+</div>
 
 </body>
   <script src='./index.js'></script>  
